# wda

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Readme.txt  vcpkg.json
src/: AirQualityForecast.cpp  HistoricalWeather.cpp  LocationManager.cpp  UIController.cpp  Utility.cpp  WeatherForecast.cpp  main.cpp
src/include/: AirQualityForecast.h  HistoricalWeather.h  LocationManager.h  UIController.h  Utility.h  WeatherForecast.h  main.h
